switch ssmtp to msmtp

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-template_host=somehost.com
-email_recipient=example@somehost.com
+IPALERT_SOURCE=***REPLACE_ME***
+IPALERT_RECIPIENT=***REPLACE_ME***
+
+GMAIL_HOST=smtp.gmail.com
+GMAIL_PORT=587
+GMAIL_FROM=***REPLACE_ME***
+GMAIL_USER=***REPLACE_ME***
+GMAIL_PASS=***REPLACE_ME***
